<package format="2">
  <name>Assem1 - Copy - Copy</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Assem1 - Copy - Copy</p>
    <p>This package contains configuration data, 3D models and launch files
for Assem1 - Copy - Copy robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>